navbar on mobile screen fixed

--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,10 @@ html {
   }
 
   @media (min-width: 768px) {
-    font-size: 18px;
+    font-size: 17px;
   }
 
   @media (min-width: 1024px) {
-    font-size: 20px;
+    font-size: 17px;
   }
 }
